--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "prettier"],
+  "extends": "airbnb",
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
@@ -8,7 +8,7 @@
     }
   },
   "plugins": [
-    "react-hooks", "prettier"
+    "react-hooks"
   ],
   "env": {
     "browser": true,
@@ -17,7 +17,6 @@
     "es6": true
   },
   "rules": {
-    "prettier/prettier": "error",
     "space-before-function-paren": "off",
     "react/prefer-stateless-function": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
